#2.15 Partials with Pug

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,11 +1,10 @@
 doctype html 
 html
     head
+        link(rel="stylesheet", href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css", integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p", crossorigin="anonymous")
         title | Wetube 
     body 
-        header 
-            h1 Wetube
+        include ../partials/header
         main 
             block content
-        footer 
-            span &copy; WeTube
+        include ../partials/footer
