--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -1,4 +1,9 @@
 extends ./layouts/main 
 
 block content
-    p Edit Video
+    .form-container 
+        form(action=routes.editVideo method="get")
+            input(type="text", placeholder="Title", name="title")
+            textarea(placeholder="Description", name="description")
+            input(type="submit", value="Edit Video")
+        a.form-cintgaibner__link.form-container__link--delete(href=`/videos${routes.deleteVideo}`) Delete Video
