--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -17,6 +17,6 @@ header.header
                 li 
                     a(href=`/videos${routes.upload}`) Upload 
                 li 
-                    a(href=routes.userDetail(user.id)) User Profile
+                    a(href=routes.userDetail(user.id)) Profile
                 li 
                     a(href=routes.logout) Log Out
