#7.11 Facebook Login Part Two

--- a/assets/scss/partials/socialLogin.scss
+++ b/assets/scss/partials/socialLogin.scss
@@ -26,4 +26,8 @@
     background-color: #4267b2;
     color: white;
   }
+  .social-login--kakao {
+    background-color: #ffe812;
+    color: black;
+  }
 }
