--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -1,13 +1,11 @@
 extends ./layouts/main
+include ./mixins/videoBlock
 
 block content
     .user-profile 
         .user-profile__header
             if typeof user.avatarUrl !== "undefined"
-                if user.avatarUrl.substring(0,4) === "http"
-                    img.u-avatar(src=user.avatarUrl)
-                else
-                    img.u-avatar(src=`/${user.avatarUrl}`)
+                img.u-avatar(src=`${user.avatarUrl.includes("http")? user.avatarUrl: `/${user.avatarUrl}`}`)
             h4.profile__username=user.name
         if loggedUser
             if user.id === loggedUser.id 
@@ -16,3 +14,12 @@ block content
                         button ✏️ Edit Profile
                     a(href=`/users${routes.changePassword}`)
                         button 🔒 Change Password
+        .uploaded-videos 
+            .home-videos 
+                each item in user.videos
+                    +videoBlock({
+                        id:item.id,
+                        title: item.title,
+                        views: item.views,
+                        videoFile: item.fileUrl
+                    })
