--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -7,8 +7,7 @@ block content
             if typeof user.avatarUrl !== "undefined"
                 img.u-avatar(src=`${user.avatarUrl.includes("http")? user.avatarUrl: `/${user.avatarUrl}`}`)
             h4.profile__username=user.name
-        if loggedUser
-            if user.id === loggedUser.id 
+            if loggedUser && user.id === loggedUser.id 
                 .user-profile__btns
                     a(href=`/users${routes.editProfile}`)
                         button ✏️ Edit Profile
