--- a/assets/scss/partials/videoPlayer.scss
+++ b/assets/scss/partials/videoPlayer.scss
@@ -22,11 +22,25 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     font-size: 0.8rem;
+    .videoPlayer__volume {
+      position: absolute;
+      padding: 0;
+      opacity: 1;
+      top: -60px;
+      left: -25px;
+      transform: rotate(-90deg);
+      z-index: 10;
+      width: 5rem;
+    }
     .videoPlayer__column:first-child {
       display: flex;
       align-items: center;
       span:first-child {
-        margin-right: 0.8rem;
+        margin-left: 0.5rem;
+        margin-right: 0.2rem;
+      }
+      span:last-child {
+        margin-left: 0.2rem;
       }
     }
     .videoPlayer__column:last-child {
