--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -24,3 +24,5 @@ block content
                 span.video__comment-number 1 comment
             else
                 span.video__comment-number #{video.comments.length} comments
+            form.add__comment#jsAddComment
+                input(type="text", placeholder="Add a comment")
