#12.0 Intriduction to AWS S3

--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -56,6 +56,14 @@
         &:not(:last-child) {
           margin-bottom: 1rem;
         }
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        span {
+          grid-column: 1/5;
+        }
+        i {
+          grid-column: 5/6;
+        }
       }
     }
   }
