--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -32,4 +32,10 @@ block content
                 input(type="text", placeholder="Add a comment")
             ul.video__comments-list#jsCommentList
                 each comment in video.comments.reverse()
-                    li=comment.text
+                    li
+                        span=comment.text
+                        if commentUsers 
+                            each commentUser in commentUsers
+                                if commentUser.creator.id.toString() === loggedUser.id
+                                  i.far.fa-times-circle
+
