--- a/src/views/videoDetail.pug
+++ b/src/views/videoDetail.pug
@@ -20,7 +20,7 @@ block content
                 | Uploaded by   
                 a(href=routes.userDetail(video.creator.id))=video.creator.name
         .video__comments
-            if video.comments.length === 0 || video.comments.length === 1
+            if video.comments.length < 2
                 span.video__comment-number
                     span#jsCommentNumber=video.comments.length  
                         span#jsOneComment   comment
@@ -34,8 +34,7 @@ block content
                 each comment in video.comments.reverse()
                     li
                         span=comment.text
-                        if commentUsers 
-                            each commentUser in commentUsers
-                                if commentUser.creator.id.toString() === loggedUser.id
-                                  i.far.fa-times-circle
+                        if comment.creator.toString() === loggedUser.id
+                            i.far.fa-times-circle
+                                
 
