Login issue solved

--- a/src/views/videoDetail.pug
+++ b/src/views/videoDetail.pug
@@ -34,7 +34,7 @@ block content
                 each comment in video.comments.reverse()
                     li
                         span=comment.text
-                        if comment.creator.toString() === loggedUser.id
+                        if loggedUser && comment.creator.toString() === loggedUser.id
                             i.far.fa-times-circle
                                 
 
